--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.spacebunny.hshen.inscat">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".InsCatApplication"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".view.MainActivity"
             android:label="@string/app_name"
@@ -20,6 +23,10 @@
         </activity>
 
         <activity android:name=".view.post_detail.PostActivity" />
+
+        <activity android:name=".view.profile_detail.ProfileActivity" />
+
+
     </application>
 
 </manifest>
